--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/vanadiumjam/discord-nitro-fake-claim/issues"
   },
-  "homepage": "https://github.com/vanadiumjam/discord-nitro-fake-claim#readme"
+  "homepage": "https://github.com/vanadiumjam/discord-nitro-fake-claim#readme",
+  "dependencies": {
+    "discord.js": "^14.18.0"
+  }
 }
